Add page that lists your friends and the amount of reminders they have

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,6 +7,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="/reminders">Reminder List</a>
       <a class="nav-item nav-link" href="/reminder/new">Create</a>
+      <a class="nav-item nav-link" href="/friends">Add Friend</a>
     </div>
   </div>
 </nav>
