--- a/views/friend/friends.ejs
+++ b/views/friend/friends.ejs
@@ -1,7 +1,7 @@
 <div class="container">
   <h1 class="page-header">Friends</h1>
   
-  <h4>Your friends:</h4>
+  <h4>Your friends</h4>
   <ul class="list-group">
     <% if (friends.length === 0) { %>
       <li class="list-group-item">
@@ -12,6 +12,15 @@
       <li class="list-group-item">
         <strong><%= friend.email %> | </strong>
         <%= friend.amount %> reminders
+      </li>
+    <% }) %>
+  </ul>
+  <p></p>
+  <h4>People you may know</h4>
+  <ul class="list-group">
+    <% nonFriends.forEach(function (user) { %>
+      <li class="list-group-item"><strong><%= user.email %> | </strong>
+        <%= user.amount %> reminders
       </li>
     <% }) %>
   </ul>
