--- a/views/reminder/edit.ejs
+++ b/views/reminder/edit.ejs
@@ -33,6 +33,6 @@
         </label>
       </div>
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button type="submit" class="btn btn-success">Submit</button>
   </form>
 </div>
