--- a/views/reminder/single-reminder.ejs
+++ b/views/reminder/single-reminder.ejs
@@ -12,7 +12,23 @@
             <span class="label label-danger">False</span>
           <% } %>
         </h4>
-
+        <h4>Subtasks:</h4>
+        
+        <% if (reminderItem.subtasks.length == 0) { %>
+          <label>None</label>
+        <% } else {%>
+        <% reminderItem.subtasks.forEach((subtask) => { %>
+          <div class="form-check">
+          <% if (subtask.completed == true) { %>
+            <input class="form-check-input" type="checkbox" checked="checked" id="flexCheckDefault" disabled>
+          <% } else { %>
+            <input class="form-check-input" type="checkbox" id="flexCheckDefault" disabled>
+          <% } %>
+        <label class="form-check-label" for="flexCheckDefault">
+          <%= subtask.title %>
+        </label>
+      </div>
+        <% }) }%>
         <a class="btn btn-warning" href=<%= "/reminder/" + reminderItem.id + "/edit" %>>Edit</a>
 
         <form class="deleteForm "method="POST" action=<%= "/reminder/delete/" + reminderItem.id %>>
@@ -21,5 +37,4 @@
 
       </li>
     </ul>
-
 </div>
