--- a/views/reminder/edit.ejs
+++ b/views/reminder/edit.ejs
@@ -11,6 +11,30 @@
     </div>
 
     <div class="form-group">
+      <label for="subtasks">Subtasks</label>
+      <% if (reminderItem.subtasks.length == 0) { %>
+        <label>None</label>
+      <% } else {%>
+      <% reminderItem.subtasks.forEach((subtask) => { %>
+        <div class="form-check">
+        <% if (subtask.completed == true) { %>
+          <input class="form-check-input" type="checkbox" checked="checked" id="flexCheckDefault">
+        <% } else { %>
+          <input class="form-check-input" type="checkbox" id="flexCheckDefault">
+      <% } %>
+      <label class="form-check-label" for="flexCheckDefault">
+      <%= subtask.title %>
+      </label>
+    </div>
+    <% })}%>
+
+
+    <div class="form-group">
+      <textarea class="form-control" id=subtaskInput" placeholder="Add a new subtask"></textarea>
+      <button type="submit" class="btn btn-primary">Create Subtask</button>
+    </div>
+
+    <div class="form-group">
       <label for="completed">Completed</label>
       <div class="radio">
         <label>
