--- a/views/reminder/edit.ejs
+++ b/views/reminder/edit.ejs
@@ -10,7 +10,7 @@
       <textarea class="form-control" id="descriptionInput" rows="3" placeholder="Description" name="description"><%= reminderItem.description %></textarea>
     </div>
 
-    <div class="form-group">
+    <div class="form-group" id="subtaskList">
       <label for="subtasks">Subtasks</label>
       <% if (reminderItem.subtasks.length == 0) { %>
         <label>None</label>
@@ -18,20 +18,18 @@
       <% reminderItem.subtasks.forEach((subtask) => { %>
         <div class="form-check">
         <% if (subtask.completed == true) { %>
-          <input class="form-check-input" type="checkbox" checked="checked" id="flexCheckDefault">
+          <input class="form-check-input" type="checkbox" checked="checked">
         <% } else { %>
-          <input class="form-check-input" type="checkbox" id="flexCheckDefault">
-      <% } %>
-      <label class="form-check-label" for="flexCheckDefault">
-      <%= subtask.title %>
-      </label>
-    </div>
+          <input class="form-check-input" type="checkbox">
+        <% } %>
+        <label class="form-check-label" for="flexCheckDefault"><%= subtask.title %></label>
+        </div>
     <% })}%>
-
+    </div>
 
     <div class="form-group">
-      <textarea class="form-control" id=subtaskInput" placeholder="Add a new subtask"></textarea>
-      <button type="submit" class="btn btn-primary">Create Subtask</button>
+      <textarea class="form-control" id="createSubtaskTextArea" placeholder="Add a new subtask"></textarea>
+      <button type="button" id="createSubtask" class="btn btn-primary">Create Subtask</button>
     </div>
 
     <div class="form-group">
@@ -60,3 +58,4 @@
     <button type="submit" class="btn btn-success">Submit</button>
   </form>
 </div>
+<script src="/edit.js"></script>
