--- a/views/reminder/create.ejs
+++ b/views/reminder/create.ejs
@@ -8,6 +8,15 @@
       <label for="description">Description</label>
       <textarea class="form-control" id="descriptionInput" rows="3" placeholder="Description" name="description"></textarea>
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <div class="form-group" id="subtaskList">
+      <label for="subtasks">Subtasks</label>
+      <p id="subtaskNone">None</p>
+    </div>
+    <div class="form-group">
+      <textarea class="form-control" id="createSubtaskTextArea" placeholder="Add a new subtask"></textarea>
+      <button type="button" id="createSubtask" class="btn btn-primary">Create Subtask</button>
+    </div>
+    <button type="submit" class="btn btn-success">Submit</button>
   </form>
 </div>
+<script src="/subtask.js"></script>
