--- a/views/reminder/edit.ejs
+++ b/views/reminder/edit.ejs
@@ -13,15 +13,15 @@
     <div class="form-group" id="subtaskList">
       <label for="subtasks">Subtasks</label>
       <% if (reminderItem.subtasks.length == 0) { %>
-        <label>None</label>
+        <p id="subtaskNone">None</p>
       <% } else {%>
       <% reminderItem.subtasks.forEach((subtask) => { %>
         <div class="form-check">
           <input class="form-check-input" type="hidden" name="<%= subtask.id %>" value="<%= subtask.title %>">
         <% if (subtask.completed == true) { %>
-          <input class="form-check-input" id="subtaskBox" type="checkbox" name="<%= subtask.id %>" value="<%= subtask.title %>" checked="checked">
+          <input class="form-check-input" type="checkbox" name="<%= subtask.id %>" value="<%= subtask.title %>" checked="checked">
         <% } else { %>
-          <input class="form-check-input" id="subtaskBox" type="checkbox" name="<%= subtask.id %>" value="<%= subtask.title %>">
+          <input class="form-check-input" type="checkbox" name="<%= subtask.id %>" value="<%= subtask.title %>">
         <% } %>
         <label class="form-check-label" for="<%= subtask.id %>"><%= subtask.title %></label>
         </div>
@@ -59,4 +59,4 @@
     <button type="submit" class="btn btn-success">Submit</button>
   </form>
 </div>
-<script src="/edit.js"></script>
+<script src="/subtask.js"></script>
