completed the reminder time function

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,7 +5,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="/reminders">Reminder List</a>
+      <a class="nav-item nav-link" href="/reminders">List All</a>
       <a class="nav-item nav-link" href="/reminder/new">Create</a>
       <a class="nav-item nav-link" href="/friends">Friends</a>
     </div>
