--- a/views/reminder/create.ejs
+++ b/views/reminder/create.ejs
@@ -8,6 +8,14 @@
       <label for="description">Description</label>
       <textarea class="form-control" id="descriptionInput" rows="3" placeholder="Description" name="description"></textarea>
     </div>
+    <div class="form-group">
+      <lable for="reminderDate">Set Reminder Date: </lable>
+      <input type="date" class="form-control" name="reminderDate">
+    </div>
+    <div class="form-group">
+      <lable for="reminderTime">Set Reminder Time: </lable>
+      <input type="time" class="form-control" name=reminderTime>
+    </div>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
 </div>
