--- a/views/reminder/edit.ejs
+++ b/views/reminder/edit.ejs
@@ -11,6 +11,23 @@
       <textarea class="form-control" id="descriptionInput" rows="3" placeholder="Description" name="description"><%= reminderItem.description %></textarea>
     </div>
 
+    <div class="form-group" id="tagList">
+      <label>Tags</label>
+      <% reminderItem.tags.forEach((tag) => {%>
+        <span class="d-inline badge rounded-pill bg-warning text-dark m-1"> 
+          <%= tag %>
+        </span>
+        <input type="hidden" value='tag-<%= tag %>'>
+      <%})%>
+      
+    </div>
+
+    <div class="form-group">
+      <textarea class="form-control" placeholder="Add a new tag" name="newTag" id="createTagTextArea"></textarea>
+      <p></p>
+      <button type="button" class="btn btn-primary" id="createTag">Add Tag</button>
+    </div>
+
     <div class="form-group" id="subtaskList">
       <label for="subtasks">Subtasks</label>
       <% if (reminderItem.subtasks.length == 0) { %>
