add tags to single-reminder

--- a/views/reminder/edit.ejs
+++ b/views/reminder/edit.ejs
@@ -17,9 +17,8 @@
         <span class="d-inline badge rounded-pill bg-warning text-dark m-1"> 
           <%= tag %>
         </span>
-        <input type="hidden" value='tag-<%= tag %>'>
+        <input type="hidden" name="tag-<%= tag %>" value="tag-<%= tag %>">
       <%})%>
-      
     </div>
 
     <div class="form-group">
