Implement register funcionality

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,5 +1,5 @@
 <div class="container">
-    <form action="/login" method="POST">
+    <form action="/auth/login" method="POST">
         <div class="form-group">
             <h3 class="text-center">Login</h3>
             <label for="exampleInputEmail1">Email address</label>
