--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="/reminders">Reminder List</a>
+  <% if (typeof(profilePic) != 'undefined') { %>
+    <div class="image-wrapper mr-auto">
+      <img src="<%= profilePic %>" alt="profile pic">
+    </div>
+  <% } %> 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
