better image square format

--- a/public/style.css
+++ b/public/style.css
@@ -147,7 +147,8 @@ footer.footer {
   margin: 10px 0;
 }
 .image-wrapper img {
-  height: 100%;
+  width: 100%;
+  min-height: 100%;
   position: absolute;
   left: 0;
   top: 50%;
