add important image

--- a/views/friend/friends.ejs
+++ b/views/friend/friends.ejs
@@ -6,6 +6,7 @@
     <% if (friends.length === 0) { %>
       <li class="list-group-item">
           <strong>You have no friends :(</strong>
+          <img src="./ratdog.png" alt="ratdog">
       </li>
     <% } %>
     <% friends.forEach(function (friend) { %>
