added logout button

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,5 +16,6 @@
         <img src="<%= profilePic %>" alt="profile pic" class="nav-item border rounded">
       </div>
     <% } %> 
+    <a href="/auth/logout" class="nav-item nav-link">Logout</a>
   </div>
 </nav>
