--- a/views/reminder/index.ejs
+++ b/views/reminder/index.ejs
@@ -21,6 +21,7 @@
           </span>
         </div>
       <%})%>
+
       <p><%= reminderItem.description %></p>
       </div>
 
@@ -51,15 +52,41 @@
           <% friend.reminders.forEach( function(reminder) { %> 
               <li class="list-group-item">
                   <div>
-                    <strong><%= reminder.title %>: </strong>
-                    <%= reminder.description %>
-                    || Completed:
-                    <% if (reminder.completed == true) { %>
-                        <span class="badge badge-success">True</span>
-                    <% } else if (reminder.completed == false) { %>
-                        <span class="badge badge-danger">False</span>
-                    <% } %>
+                    <strong><%= reminder.title %></strong>
+                    <span class="pull-right">Completed: 
+                        <% if (reminder.completed == true) { %>
+                          <span class="badge badge-success">True</span>
+                        <% } else if (reminder.completed == false) { %>
+                          <span class="badge badge-danger">False</span>
+                        <% } %>
+                    </span>
+
+                    <% reminder.tags.forEach((tag) => { %>
+                        <div class = "d-inline m-1 tags">
+                          <span class="d-inline badge rounded-pill bg-warning text-dark ">
+                            <%= tag %>
+                          </span>
+                        </div>
+                      <%})%>
+
+                    <p><%= reminder.description %></p>
                   </div>
+
+                  <% if (reminder.subtasks.length > 0) { %>
+                    <span class="d-block"><strong>Subtasks</strong></span>
+                    <% reminder.subtasks.forEach((subtask) => { %>
+                        <div class="form-check d-inline">
+                            <% if (subtask.completed == true) { %>
+                            <input class="form-check-input" type="checkbox" checked="checked" id="flexCheckDefault" disabled>
+                            <% } else { %>
+                            <input class="form-check-input" type="checkbox" id="flexCheckDefault" disabled>
+                            <% } %>
+                            <label class="form-check-label mr-2" for="flexCheckDefault">
+                            <%= subtask.title %>
+                            </label>
+                        </div>
+                    <% }) %>
+                  <% } %>
               </li>
           <% }) %>
           </ul>
