--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,20 @@ h6 {
   font-weight: 700;
 }
 
+h3 {
+  font-family: 'Indie Flower', cursive;
+  margin: 5px 0px;
+}
+
+h4{
+  color:grey;
+  padding: 10px 0px;
+}
+
+h4 #status {
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
 header.masthead {
   position: relative;
   background-color: #fff;
@@ -135,6 +149,10 @@ footer.footer {
   margin-top: 10px;
 }
 
+.form-group label {
+  font-weight: bold;
+}
+
 /* taken from stackoverflow
   https://stackoverflow.com/questions/42680085/how-do-i-make-images-display-as-a-square */
 
@@ -153,4 +171,42 @@ footer.footer {
   left: 0;
   top: 50%;
   transform: translateY(-50%);
+}
+
+div #box {
+  border:2px solid #EBECF0;
+  border-radius: 5px;
+  width: 100%;
+  height: 50px;
+  align-content: center;
+  vertical-align: middle;
+  padding: 10px;
+  margin: 4px 0px;
+}
+
+div .form-check-single {
+  border:2px solid #EBECF0;
+  border-radius: 5px;
+  width: 100%;
+  height: 50px;
+  align-content: center;
+  vertical-align: middle;
+  padding: 10px;
+  margin: 4px 0px;
+} 
+
+.form-checkbox {
+  float: right;
+  margin: 10px;
+  border: none;
+  transform: scale(2);
+}
+
+.btn-time {
+  float:right;
+  opacity: 0.4;
+}
+
+.btn-time:hover {
+  opacity: 1.0;
 }
