--- a/views/reminder/single-reminder.ejs
+++ b/views/reminder/single-reminder.ejs
@@ -1,5 +1,7 @@
 <div class="container">
-  <h1 class="page-header">Reminders</h1>
+  <div id="header">
+    <h1 class="page-header">  Reminders</h1>
+  </div>
 
     <ul class="list-group">
       <li class="list-group-item">
