--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -10,6 +10,9 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
         </div>
+        <% if (failed != undefined) { %>
+            <p class="text-danger">User not found or wrong password. Please try again.</p>
+          <% } %>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
